# trade-help

./: README.md  pixi.toml  pyproject.toml
src/trade_help/: __init__.py  server.py
tests/: test_server.py
