[project]
name = "trade-help"
version = "0.1.0"
description = "A Python web server for trade help"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
